// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders blog page 1`] = `
<div>
  <Header
    location={
      Object {
        "hash": "",
        "pathname": "/blog/page.md",
        "search": "",
      }
    }
    setSearchResults={[Function]}
  />
  <BlogPage
    Page={[Function]}
    blogHero={null}
    className={null}
    location={
      Object {
        "hash": "",
        "pathname": "/blog/page.md",
        "search": "",
      }
    }
    plugins={Array []}
  />
</div>
`;

exports[`App renders first page at index if found 1`] = `
<div>
  <Header
    location={
      Object {
        "hash": "#foo",
        "pathname": "/",
      }
    }
    setSearchResults={[Function]}
  />
  <DocsPage
    Page={[Function]}
    SidebarComponent={[Function]}
    className={null}
    location={
      Object {
        "hash": "#foo",
        "pathname": "/",
      }
    }
    plugins={Array []}
  />
</div>
`;

exports[`App renders home page 1`] = `
<div>
  <Header
    location={
      Object {
        "pathname": "/home.html",
      }
    }
    setSearchResults={[Function]}
  />
  <home
    plugins={Array []}
  />
</div>
`;

exports[`App renders matched page 1`] = `
<div>
  <Header
    location={
      Object {
        "pathname": "/foo",
      }
    }
    setSearchResults={[Function]}
  />
  <DocsPage
    Page={[Function]}
    SidebarComponent={[Function]}
    className={null}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    plugins={Array []}
  />
</div>
`;
